docs: 基于 ChatGPT-5.5 Thinking 生成的文档（供后续使用参考）